# api/v1/openapi.gen.go
@@ -156,8 +156,8 @@ type GetBagParams struct {
 	XCOREOSTENANTID TenantId `json:"X-COREOS-TENANT-ID"`
 }
 
-// OpenBagParams defines parameters for OpenBag.
-type OpenBagParams struct {
+// ChangeBagStateParams defines parameters for ChangeBagState.
+type ChangeBagStateParams struct {
 	// XCOREOSREQUESTID Unique request Id
 	XCOREOSREQUESTID RequestId `json:"X-COREOS-REQUEST-ID"`
 
@@ -192,8 +192,17 @@ type GetPackageParams struct {
 	XCOREOSTENANTID TenantId `json:"X-COREOS-TENANT-ID"`
 }
 
-// OpenPackageParams defines parameters for OpenPackage.
-type OpenPackageParams struct {
+// AddBagToPackageParams defines parameters for AddBagToPackage.
+type AddBagToPackageParams struct {
+	// XCOREOSREQUESTID Unique request Id
+	XCOREOSREQUESTID RequestId `json:"X-COREOS-REQUEST-ID"`
+
+	// XCOREOSTENANTID Tenant Id
+	XCOREOSTENANTID TenantId `json:"X-COREOS-TENANT-ID"`
+}
+
+// ChangePackageStateParams defines parameters for ChangePackageState.
+type ChangePackageStateParams struct {
 	// XCOREOSREQUESTID Unique request Id
 	XCOREOSREQUESTID RequestId `json:"X-COREOS-REQUEST-ID"`
 
@@ -219,8 +228,8 @@ type ServerInterface interface {
 	// (GET /bags/{bagId})
 	GetBag(c *gin.Context, bagId string, params GetBagParams)
 	// Operation to perform on a package
-	// (POST /bags/{bagId}/{command})
-	OpenBag(c *gin.Context, bagId string, command string, params OpenBagParams)
+	// (POST /bags/{bagId}/state/{command})
+	ChangeBagState(c *gin.Context, bagId string, command string, params ChangeBagStateParams)
 	// Get list of current configured Packages
 	// (GET /packages)
 	GetPackages(c *gin.Context, params GetPackagesParams)
@@ -230,9 +239,12 @@ type ServerInterface interface {
 	// Get properties of a configured Package
 	// (GET /packages/{packageId})
 	GetPackage(c *gin.Context, packageId string, params GetPackageParams)
+	// Package composition operation
+	// (POST /packages/{packageId}/add/{bagId})
+	AddBagToPackage(c *gin.Context, packageId string, bagId string, params AddBagToPackageParams)
 	// Operation to perform on a package
-	// (POST /packages/{packageId}/{command})
-	OpenPackage(c *gin.Context, packageId string, command string, params OpenPackageParams)
+	// (POST /packages/{packageId}/state/{command})
+	ChangePackageState(c *gin.Context, packageId string, command string, params ChangePackageStateParams)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -436,8 +448,8 @@ func (siw *ServerInterfaceWrapper) GetBag(c *gin.Context) {
 	siw.Handler.GetBag(c, bagId, params)
 }
 
-// OpenBag operation middleware
-func (siw *ServerInterfaceWrapper) OpenBag(c *gin.Context) {
+// ChangeBagState operation middleware
+func (siw *ServerInterfaceWrapper) ChangeBagState(c *gin.Context) {
 
 	var err error
 
@@ -460,7 +472,7 @@ func (siw *ServerInterfaceWrapper) OpenBag(c *gin.Context) {
 	}
 
 	// Parameter object where we will unmarshal all parameters from the context
-	var params OpenBagParams
+	var params ChangeBagStateParams
 
 	headers := c.Request.Header
 
@@ -512,7 +524,7 @@ func (siw *ServerInterfaceWrapper) OpenBag(c *gin.Context) {
 		middleware(c)
 	}
 
-	siw.Handler.OpenBag(c, bagId, command, params)
+	siw.Handler.ChangeBagState(c, bagId, command, params)
 }
 
 // GetPackages operation middleware
@@ -707,8 +719,8 @@ func (siw *ServerInterfaceWrapper) GetPackage(c *gin.Context) {
 	siw.Handler.GetPackage(c, packageId, params)
 }
 
-// OpenPackage operation middleware
-func (siw *ServerInterfaceWrapper) OpenPackage(c *gin.Context) {
+// AddBagToPackage operation middleware
+func (siw *ServerInterfaceWrapper) AddBagToPackage(c *gin.Context) {
 
 	var err error
 
@@ -721,17 +733,17 @@ func (siw *ServerInterfaceWrapper) OpenPackage(c *gin.Context) {
 		return
 	}
 
-	// ------------- Path parameter "command" -------------
-	var command string
+	// ------------- Path parameter "bagId" -------------
+	var bagId string
 
-	err = runtime.BindStyledParameter("simple", false, "command", c.Param("command"), &command)
+	err = runtime.BindStyledParameter("simple", false, "bagId", c.Param("bagId"), &bagId)
 	if err != nil {
-		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter command: %s", err), http.StatusBadRequest)
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter bagId: %s", err), http.StatusBadRequest)
 		return
 	}
 
 	// Parameter object where we will unmarshal all parameters from the context
-	var params OpenPackageParams
+	var params AddBagToPackageParams
 
 	headers := c.Request.Header
 
@@ -783,7 +795,86 @@ func (siw *ServerInterfaceWrapper) OpenPackage(c *gin.Context) {
 		middleware(c)
 	}
 
-	siw.Handler.OpenPackage(c, packageId, command, params)
+	siw.Handler.AddBagToPackage(c, packageId, bagId, params)
+}
+
+// ChangePackageState operation middleware
+func (siw *ServerInterfaceWrapper) ChangePackageState(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "packageId" -------------
+	var packageId string
+
+	err = runtime.BindStyledParameter("simple", false, "packageId", c.Param("packageId"), &packageId)
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter packageId: %s", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Path parameter "command" -------------
+	var command string
+
+	err = runtime.BindStyledParameter("simple", false, "command", c.Param("command"), &command)
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter command: %s", err), http.StatusBadRequest)
+		return
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params ChangePackageStateParams
+
+	headers := c.Request.Header
+
+	// ------------- Required header parameter "X-COREOS-REQUEST-ID" -------------
+	if valueList, found := headers[http.CanonicalHeaderKey("X-COREOS-REQUEST-ID")]; found {
+		var XCOREOSREQUESTID RequestId
+		n := len(valueList)
+		if n != 1 {
+			siw.ErrorHandler(c, fmt.Errorf("Expected one value for X-COREOS-REQUEST-ID, got %d", n), http.StatusBadRequest)
+			return
+		}
+
+		err = runtime.BindStyledParameterWithLocation("simple", false, "X-COREOS-REQUEST-ID", runtime.ParamLocationHeader, valueList[0], &XCOREOSREQUESTID)
+		if err != nil {
+			siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter X-COREOS-REQUEST-ID: %s", err), http.StatusBadRequest)
+			return
+		}
+
+		params.XCOREOSREQUESTID = XCOREOSREQUESTID
+
+	} else {
+		siw.ErrorHandler(c, fmt.Errorf("Header parameter X-COREOS-REQUEST-ID is required, but not found: %s", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Required header parameter "X-COREOS-TENANT-ID" -------------
+	if valueList, found := headers[http.CanonicalHeaderKey("X-COREOS-TENANT-ID")]; found {
+		var XCOREOSTENANTID TenantId
+		n := len(valueList)
+		if n != 1 {
+			siw.ErrorHandler(c, fmt.Errorf("Expected one value for X-COREOS-TENANT-ID, got %d", n), http.StatusBadRequest)
+			return
+		}
+
+		err = runtime.BindStyledParameterWithLocation("simple", false, "X-COREOS-TENANT-ID", runtime.ParamLocationHeader, valueList[0], &XCOREOSTENANTID)
+		if err != nil {
+			siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter X-COREOS-TENANT-ID: %s", err), http.StatusBadRequest)
+			return
+		}
+
+		params.XCOREOSTENANTID = XCOREOSTENANTID
+
+	} else {
+		siw.ErrorHandler(c, fmt.Errorf("Header parameter X-COREOS-TENANT-ID is required, but not found: %s", err), http.StatusBadRequest)
+		return
+	}
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+	}
+
+	siw.Handler.ChangePackageState(c, packageId, command, params)
 }
 
 // GinServerOptions provides options for the Gin server.
@@ -821,7 +912,7 @@ func RegisterHandlersWithOptions(router *gin.Engine, si ServerInterface, options
 
 	router.GET(options.BaseURL+"/bags/:bagId", wrapper.GetBag)
 
-	router.POST(options.BaseURL+"/bags/:bagId/:command", wrapper.OpenBag)
+	router.POST(options.BaseURL+"/bags/:bagId/state/:command", wrapper.ChangeBagState)
 
 	router.GET(options.BaseURL+"/packages", wrapper.GetPackages)
 
@@ -829,7 +920,9 @@ func RegisterHandlersWithOptions(router *gin.Engine, si ServerInterface, options
 
 	router.GET(options.BaseURL+"/packages/:packageId", wrapper.GetPackage)
 
-	router.POST(options.BaseURL+"/packages/:packageId/:command", wrapper.OpenPackage)
+	router.POST(options.BaseURL+"/packages/:packageId/add/:bagId", wrapper.AddBagToPackage)
+
+	router.POST(options.BaseURL+"/packages/:packageId/state/:command", wrapper.ChangePackageState)
 
 	return router
 }
